@@ -21,7 +21,7 @@
 .\" LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
-.TH SPIPE 1 "April  2, 2013" "spiped 1.3.0" "spipe README"
+.TH SPIPE 1 "October 10, 2014" "spiped 1.4.2" "spipe README"
 .SH NAME
 spipe \- spiped client utility
 .SH SYNOPSIS
@@ -46,7 +46,7 @@ secrecy.
 .TP
 .B \-g
 Require perfect forward secrecy by dropping connections if the other
-host is using the -f option.
+host is using the \-f option.
 .TP
 .B \-j
 Disable transport layer keep-alives.
