@@ -21,7 +21,7 @@
 .\" LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
-.TH SPIPED 1 "April  2, 2013" "spiped 1.3.0" "spiped README"
+.TH SPIPED 1 "October 10, 2014" "spiped 1.4.2" "spiped README"
 .SH NAME
 spiped \- secure pipe daemon
 .SH SYNOPSIS
@@ -78,7 +78,7 @@ secrecy.
 .TP
 .B \-g
 Require perfect forward secrecy by dropping connections if the other
-host is using the -f option.
+host is using the \-f option.
 .TP
 .B \-F
 Run in foreground.  This can be useful with systems like daemontools.
